# ChangeLog for dev-util/bzr
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.23 2006/10/02 01:08:55 marienz Exp $

*bzr-0.11 (02 Oct 2006)

  02 Oct 2006; Marien Zwart <marienz@gentoo.org> -bzr-0.9.ebuild,
  -bzr-0.11_rc1.ebuild, -bzr-0.11_rc2.ebuild, +bzr-0.11.ebuild:
  Version bump, remove old versions.

*bzr-0.11_rc2 (27 Sep 2006)

  27 Sep 2006; Marien Zwart <marienz@gentoo.org> +bzr-0.11_rc2.ebuild:
  Version bump (still in package.mask).

*bzr-0.11_rc1 (25 Sep 2006)

  25 Sep 2006; Marien Zwart <marienz@gentoo.org> +bzr-0.11_rc1.ebuild:
  Version bump (package.masked release candidate).

*bzr-0.10-r1 (24 Sep 2006)

  24 Sep 2006; Marien Zwart <marienz@gentoo.org>
  +files/bzr-0.10-python-2.5-compat.patch, -bzr-0.6.2.ebuild,
  -bzr-0.7.ebuild, -bzr-0.8.ebuild, -bzr-0.8.2.ebuild, -bzr-0.8.2-r1.ebuild,
  bzr-0.9.ebuild, bzr-0.10.ebuild, +bzr-0.10-r1.ebuild:
  Clean up old versions. Fix dependency bug spotted by Flameeyes. Bump to
  0.10-r1 with a patch to mostly work with python 2.5.

*bzr-0.10 (04 Sep 2006)

  04 Sep 2006; Marien Zwart <marienz@gentoo.org>
  +files/bzr-0.10-fix-manpage-location.patch, +bzr-0.10.ebuild:
  Version bump.

*bzr-0.9 (24 Aug 2006)

  24 Aug 2006; Marien Zwart <marienz@gentoo.org>
  +files/bzr-0.9-binary-diff.patch, +bzr-0.9.ebuild:
  Version bump, closes bug #144312, thanks to Geoff Weber <janax99@yahoo.com>.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> bzr-0.8.2-r1.ebuild:
  Mark 0.8.2-r1 ~ia64

*bzr-0.8.2-r1 (25 May 2006)

  25 May 2006; Marien Zwart <marienz@gentoo.org>
  +files/bzr-0.8.2-push-repository.patch, files/70bzr-gentoo.el,
  +bzr-0.8.2-r1.ebuild:
  Add a patch from upstream for "bzr push" pushing too much. Do not include
  the .el extension when loading bzr-mode so the .elc gets picked up.

*bzr-0.8.2 (17 May 2006)

  17 May 2006; Marien Zwart <marienz@gentoo.org>
  +files/bzr-0.8.2-paramiko-1.6-compat.patch, +bzr-0.8.2.ebuild: