@@ -1,0 +1,3 @@
+MD5 68bf4e425a93bdf5961af9c3c35229bf bzr-0.12.tar.gz 1088557
+RMD160 a29a113749d8f99fce70379e07b72a16080164b1 bzr-0.12.tar.gz 1088557
+SHA256 cd4b860b1bbdf6577877b99f3f8ba93d4eb03235d06ee9f877ca846a1022f620 bzr-0.12.tar.gz 1088557
