@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/bzr
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.23 2006/10/02 01:08:55 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bzr/ChangeLog,v 1.24 2006/10/30 23:29:36 marienz Exp $
+
+*bzr-0.12 (30 Oct 2006)
+
+  30 Oct 2006; Marien Zwart <marienz@gentoo.org> -bzr-0.10.ebuild,
+  -bzr-0.10-r1.ebuild, +bzr-0.12.ebuild:
+  Version bump, add curl USE flag.
 
 *bzr-0.11 (02 Oct 2006)
 
